release should not cause any issues for them.

* iterator.cpp: Add new primesieve::iterator::jump_to().
* iterator.cpp: Fix use after free in primesieve::iterator::clear().
* iterator-c.cpp: Add new primesieve_jump_to().
* iterator-c.cpp: Mark primesieve_skipto() as deprecated.
* iterator-c.cpp: Fix use after free in primesieve_iterator_clear().
* api.cpp: Support non power of 2 sieve sizes.
* PrimeSieve.cpp: Support non power of 2 sieve sizes.
* PreSieve.cpp: Use std::initializer_list instead of std::vector.
* Erat.cpp: Improve documentation.
* C_API.md: Improve next_prime() and prev_prime() documentation.
* CPP_API.md: Improve next_prime() and prev_prime() documentation.

Changes in version 8.0, 26/06/2022
==================================

There has been a minor change in the ABI (Application binary interface) of
libprimesieve-8.0 compared to libprimesieve-7.x. This ABI break was necessary
to fix undefined behavior present in libprimesieve-7.x
(in primesieve::iterator). For more information, please read:
https://github.com/kimwalisch/primesieve/wiki/libprimesieve-8.0-ABI-changes

* primesieve::iterator's ABI has been modified in both the C & C++ API.
  primesieve::iterator's API remains backwards compatible.
* CPP_API.md: Renamed doc/CPP_Examples.md to doc/CPP_API.md.
* C_API.md: Renamed doc/C_Examples.md to doc/C_API.md.
* Fix undefined behavior (g++-12 issue) caused by resizeUninitialized.hpp,
  use new pod_vector<uint64_t> from pod_vector.hpp instead.
* iterator.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* iterator-c.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* PreSieve.cpp: Detect if the user sieves many consective intervals.
* PrimeGenerator.cpp: Improve AVX512 of fillNextPrimes().
* PrimeGenerator.cpp: Reduce memory usage for tiny stop numbers.
* PrimeGenerator.hpp: Add GCC/Clang's function multiversioning for AVX512.
* Erat.cpp: Dynamically grow the sieve size: use a small sieve size for